# ParticleCluster

CPU/: CMakeLists.txt  HuffmanZSTDCoder.h  config.h  fileIO.cpp  fileIO.h  fof_ari.h  main.cpp  main_mpi.cpp  mpi_dist.h  particle_compression.h
GPU/: CMakeLists.txt  FOFHaloFinder.cu  FOFHaloFinder.cuh  HuffmanZSTDCoder.cuh  config.cuh  fileIO.h  main.cu  main_mpi.cu  mpi_dist.cuh  particle_compression.cu  particle_compression.cuh  statistics.cu  util.cuh
